force-app/main/default/objects/GestaoSLA__c/GestaoSLA__c.object-meta.xml
<CustomObject>
    <description>Representa o contexto administrativo de configuração de SLA de uma unidade/processo de atendimento, vinculando unidade de negócio, Entitlement Process, Business Hours, tempos globais de entrada e marcos permitidos.</description>
    <label>Gestão de SLA</label>
    <nameField>
        <label>Nome da Gestão de SLA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gestões de SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>