force-app/main/default/objects/GestaoSLA__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se a Gestão de SLA está ativa.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>