force-app/main/default/objects/GestaoSLA__c/fields/BusinessHoursName__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursName__c</fullName>
    <description>Nome do Business Hours padrão usado na Gestão de SLA.</description>
    <label>Nome do Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>