force-app/main/default/objects/GestaoSLA__c/fields/BusinessHoursSecundarioName__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursSecundarioName__c</fullName>
    <description>Nome do Business Hours secundário usado pela Região de Atendimento Secundária desta Gestão de SLA.</description>
    <inlineHelpText>Nome exato do registro de Business Hours cadastrado no Setup para a região secundária.</inlineHelpText>
    <label>Nome do Business Hours Secundário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>