force-app/main/default/objects/GestaoSLA__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição funcional da Gestão de SLA.</description>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>