force-app/main/default/objects/GestaoSLA__c/fields/EntitlementProcessName__c.field-meta.xml
<CustomField>
    <fullName>EntitlementProcessName__c</fullName>
    <description>Nome do Entitlement Process associado à Gestão de SLA.</description>
    <label>Nome do Entitlement Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>