force-app/main/default/objects/GestaoSLA__c/fields/PossuiBusinessHoursSecundario__c.field-meta.xml
<CustomField>
    <fullName>PossuiBusinessHoursSecundario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta Gestão de SLA opera com um segundo Business Hours, para atendimento em outra região/fuso horário (ex: Rebocadores com equipe na China).</description>
    <inlineHelpText>Marque se esta Gestão de SLA precisa de um segundo Business Hours para uma região de atendimento diferente.</inlineHelpText>
    <label>Duplo Business Hours?</label>
    <type>Checkbox</type>
</CustomField>