force-app/main/default/objects/GestaoSLA__c/fields/RegiaoAtendimentoSecundaria__c.field-meta.xml
<CustomField>
    <fullName>RegiaoAtendimentoSecundaria__c</fullName>
    <description>Região de atendimento secundária desta Gestão de SLA, usada quando Duplo Business Hours estiver marcado.</description>
    <inlineHelpText>Região de atendimento que utiliza o Business Hours secundário (ex: China).</inlineHelpText>
    <label>Região de Atendimento Secundária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RegiaoAtendimentoSecundaria</valueSetName>
    </valueSet>
</CustomField>