force-app/main/default/objects/GestaoSLA__c/fields/StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>StaticResourceName__c</fullName>
    <description>Nome do Static Resource que poderá ser usado futuramente pelo LWC como imagem/identidade visual da Gestão de SLA.</description>
    <label>Nome do Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>