force-app/main/default/objects/GestaoSLA__c/fields/TempoFilaEmailMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoFilaEmailMinutos__c</fullName>
    <description>Tempo global, em minutos, para o marco Fila Email (tempo de fila do e-mail antes da triagem/atendimento). Não varia por prioridade e não depende de categorização.</description>
    <label>Tempo de Fila de Email em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>