force-app/main/default/objects/GestaoSLA__c/fields/TempoRespostaChatMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoRespostaChatMinutos__c</fullName>
    <description>Tempo global, em minutos, para o marco Resposta Chat. Não varia por prioridade e não depende de categorização.</description>
    <label>Tempo de Resposta Chat em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>