force-app/main/default/objects/GestaoSLA__c/fields/TempoTriagemMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoTriagemMinutos__c</fullName>
    <description>Tempo global, em minutos, para o marco Triagem. Não varia por prioridade e não depende de categorização.</description>
    <label>Tempo de Triagem em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>