force-app/main/default/objects/GestaoSLA__c/fields/UsaTempoFilaEmail__c.field-meta.xml
<CustomField>
    <fullName>UsaTempoFilaEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta Gestão de SLA utiliza o marco único de Tempo de Fila de Email. Controla a exibição do campo na tela e a ativação automática do MarcoSLA__c correspondente.</description>
    <label>Usa Tempo de Fila de Email?</label>
    <type>Checkbox</type>
</CustomField>