force-app/main/default/objects/GestaoSLA__c/fields/UsaTempoRespostaChat__c.field-meta.xml
<CustomField>
    <fullName>UsaTempoRespostaChat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta Gestão de SLA utiliza o marco único de Tempo de Resposta Chat. Controla a exibição do campo na tela e a ativação automática do MarcoSLA__c correspondente.</description>
    <label>Usa Tempo de Resposta Chat?</label>
    <type>Checkbox</type>
</CustomField>