force-app/main/default/objects/GestaoSLA__c/fields/UsaTempoTriagem__c.field-meta.xml
<CustomField>
    <fullName>UsaTempoTriagem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta Gestão de SLA utiliza o marco único de Tempo de Triagem. Controla a exibição do campo na tela e a ativação automática do MarcoSLA__c correspondente.</description>
    <label>Usa Tempo de Triagem?</label>
    <type>Checkbox</type>
</CustomField>